--- a/index.html
+++ b/index.html
@@ -33,6 +33,16 @@
 }
 </script> -->
 
+<style type="text/css">
+header {
+	height: 45em;
+	background: url('law.jpg') no-repeat center;
+	background-size: cover;
+	position: relative;
+	margin-bottom: 4em;
+}
+</style>
+
 <header class="white-text valign-wrapper">
 	<div style="position: relative;" class="container">
 		
