--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ header {
 			<div class="col s12 m6">
 				<div class="card hoverable">
 					<div class="card-image">
-						<img src="https://www.incimages.com/uploaded_files/image/1920x1080/getty_826472146_2000133320009280221_388338.jpg">
+						<a href="question.html"><img src="https://www.incimages.com/uploaded_files/image/1920x1080/getty_826472146_2000133320009280221_388338.jpg"></a>
 						<span class="card-title"><b>Ask a Question</b></span>
 					</div>
 					<div class="card-content">
@@ -82,7 +82,7 @@ header {
 			<div class="col s12 m6">
 				<div class="card hoverable">
 					<div class="card-image">
-						<img src="https://media.istockphoto.com/videos/businessmen-working-in-desktop-connected-online-for-covid19-video-id1232811584?s=640x640">
+						<a href="schedule.html"><img src="https://media.istockphoto.com/videos/businessmen-working-in-desktop-connected-online-for-covid19-video-id1232811584?s=640x640"></a>
 						<span class="card-title"><b>Schedule a Meeting</b></span>
 					</div>
 					<div class="card-content">
