--- a/question.html
+++ b/question.html
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" />
 
-
+<a href="index.html"><button type="button" class="btn">Home</button></a>
 <div class="container">
 <center><h1>Ask a Question</h1></center>
 
