--- a/schedule.html
+++ b/schedule.html
@@ -1,5 +1,5 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" />
-
+<a href="index.html"><button type="button" class="btn">Home</button></a>
 
 <div class="container">
 <center><h1>Schedule a Meeting</h1></center>
