--- a/services.html
+++ b/services.html
@@ -1,7 +1,7 @@
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" />
 
-
+<a href="index.html"><button type="button" class="btn">Home</button></a>
 <div class="container">
 <center><h1>Services</h1></center>
 <br>
